# lambdacube-quake3

./: .gitattributes  .gitignore  .travis.yml  BSP.hs  Camera.hs  Character.hs  Collision.hs  Graphics.hs  Graphics.lc  Items.hs  LICENSE  Loading.json  Loading.lc  MD3.hs  Main.hs  Material.hs  Quake3-Internals.md  README.md  Render.hs  ShaderParser.hs  SimpleGraphics.json  TODO  Zip.hs  api-design  client-server  current-task  dev.sh  engine-api-design.md  game-effects  lambdacube-quake3.cabal  lc-q3-overview.md  q3_renderer_api  q3demo.cabal  quake3.lc  stack.yaml  status-bar
GameEngine/: BSP.hs  BezierSurface.hs  Character.hs  Collision.hs  Content.hs  Culling.hs  Engine.hs  Entities.hs  Entity.hs  Frustum.hs  GameLogic.hs  Items.hs  MD3.hs  Material.hs  Q3Patch.hs  Render.hs  RenderSystem.hs  Scene.hs  ShaderParser.hs  Utils.hs  Visuals.hs  World.hs  Zip.hs
GameEngine/Data/: BSP.hs  Character.hs  GameCharacter.hs  Items.hs  MD3.hs  Material.hs
GameEngine/Graphics/: BSP.hs  Culling.hs  Frustum.hs  GameCharacter.hs  MD3.hs  Quad.hs  Render.hs  Storage.hs
GameEngine/Loader/: BSP.hs  Character.hs  Entity.hs  GameCharacter.hs  Image.hs  MD3.hs  ShaderParser.hs
GameEngine/Logic/: Entities.hs  GameLogic.hs  LoadEntities.hs  Visuals.hs  World.hs
cbits/: stb_image.h
game/: CodeSample.hs  Collision.hs  Entities.hs  GameLogic.hs  GameMain.hs  Items.hs  LoadEntities.hs  LoadResources.hs  Main.hs  Monads.hs  Movers.hs  Player.hs  RenderGame.hs  RenderSystem.hs  Visuals.hs  World.hs  lambdacube-quake3.cabal
game-engine/: lambdacube-quake3-engine.cabal
game-engine/GameEngine/: Collision.hs  Content.hs  RenderSystem.hs  Scene.hs  Utils.hs
game-engine/GameEngine/Data/: GameCharacter.hs  MD3.hs
game-engine/GameEngine/Graphics/: BezierSurface.hs  Culling.hs  Frustum.hs  GameCharacter.hs  MD3.hs  Quad.hs  Storage.hs
game-engine/GameEngine/Loader/: Image.hs  MD3.hs  ShaderParser.hs  Zip.hs
game-engine/lc/: Loading.json  Loading.lc  SimpleGraphics.json
lc/: SimpleGraphics.lc
mapviewer/: Camera.hs  Content.hs  Engine.hs  Entity.hs  Items.hs  ItemsMV.hs  Main.hs  MapViewer.hs  quake3-mapviewer.cabal
tools/md3-show/: LICENSE  Md3Show.hs  md3-show.cabal
