name:                lambdacube-quake3
version:             0.1.0.0
synopsis:            first person shooter game engine
-- description:         
homepage:            lambdacube3d.com
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Data-Files:
  lc/Graphics.lc
  lc/Loading.json
  lc/Loading.lc
  lc/Material.lc
  lc/SimpleGraphics.json
  lc/SimpleGraphics.lc

Flag mapviewer
  Description: Q3 map viewer application
  Default: True

library
  exposed-modules:     GameEngine.Data.BSP
                       GameEngine.Data.MD3
                       GameEngine.Data.GameCharacter
                       GameEngine.Data.Items
                       GameEngine.Data.Material
                       GameEngine.Loader.BSP
                       GameEngine.Loader.Entity
                       GameEngine.Loader.GameCharacter
                       GameEngine.Loader.MD3
                       GameEngine.Loader.ShaderParser
                       GameEngine.Loader.Zip
                       GameEngine.Graphics.Culling
                       GameEngine.Graphics.Frustum
                       GameEngine.Graphics.Render
                       GameEngine.Engine
                       GameEngine.Entity
                       GameEngine.BezierSurface
                       GameEngine.Collision
                       GameEngine.Utils

  other-modules:       Paths_lambdacube_quake3
  -- other-extensions:    
  build-depends:       base >=4.8 && <5,
                       containers >=0.5 && <0.6,
                       filepath >=1.4 && <1.5,
                       directory >=1.2 && <1.3,
                       deepseq >=1.4 && <1.5,
                       process >=1.2 && <1.5,
                       time >=1.5 && <1.7,
                       transformers >=0.4 && <0.6,
                       bytestring >=0.10 && <0.11,
                       bytestring-trie >=0.2 && <0.3,
                       binary >=0.7 && <0.9,
                       data-binary-ieee754 >=0.4 && <0.5,
                       vect >=0.4 && <0.5,
                       vector >=0.11 && <0.12,
                       megaparsec >=5.0 && <5.1,
                       aeson >=0.9 && <1,
                       pretty-show >=1.6 && <1.7,
                       digest >=0.0 && <0.1,
                       JuicyPixels >=3.2 && <3.3,
                       zlib >=0.6 && <0.7,
                       lambdacube-compiler >=0.6 && <0.7,
                       lambdacube-gl >=0.5 && <0.6,
                       lambdacube-ir >=0.3 && <0.4
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable q3mapviewer
  hs-source-dirs:   mapviewer
  main-is:          MapViewer.hs
  default-language: Haskell2010

  build-depends:
    base < 5,
    containers >=0.5 && <0.6,
    filepath >=1.4 && <1.5,
    directory >=1.2 && <1.3,
    vect >=0.4 && <0.5,
    vector >=0.11 && <0.12,
    GLFW-b >= 1.4.7,
    elerea >=2.8 && <2.9,
    OpenGLRaw >=3.1 && <4,
    proteaaudio >= 0.6.5 && <1,
    bytestring >=0.10 && <0.11,
    lambdacube-gl >=0.5 && <0.6,
    lambdacube-quake3

  if flag(mapviewer)
    Buildable: True
  else
    Buildable: False
