name:                lambdacube-quake3
version:             0.1.0.0
synopsis:            first person shooter game engine
-- description:         
homepage:            lambdacube3d.com
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
                     cbits/stb_image.h
cabal-version:       >=1.10

Data-Files:
  lc/Graphics.lc
  lc/Loading.json
  lc/Loading.lc
  lc/Material.lc
  lc/SimpleGraphics.json
  lc/SimpleGraphics.lc

Flag mapviewer
  Description: Q3 map viewer application
  Default: True

Flag shooter
  Description: 3D shooter game
  Default: True

library
  exposed-modules:     GameEngine.Data.BSP
                       GameEngine.Data.MD3
                       GameEngine.Data.GameCharacter
                       GameEngine.Data.Material
                       GameEngine.Loader.BSP
                       GameEngine.Loader.Entity
                       GameEngine.Loader.GameCharacter
                       GameEngine.Loader.MD3
                       GameEngine.Loader.ShaderParser
                       GameEngine.Loader.Zip
                       GameEngine.Loader.Image
                       GameEngine.Graphics.Culling
                       GameEngine.Graphics.Frustum
                       GameEngine.Graphics.GameCharacter
                       GameEngine.Graphics.BSP
                       GameEngine.Graphics.MD3
                       GameEngine.Graphics.Storage
                       GameEngine.Graphics.BezierSurface
                       GameEngine.Content
                       GameEngine.Collision
                       GameEngine.Utils
                       GameEngine.Scene
                       GameEngine.RenderSystem

  other-modules:       Paths_lambdacube_quake3
  -- other-extensions:    
  build-depends:       base >=4.8 && <5,
                       containers >=0.5 && <0.6,
                       unordered-containers >=0.2 && <0.3,
                       hashable >= 1.2 && <1.3,
                       filepath >=1.4 && <1.5,
                       directory >=1.2 && <1.3,
                       deepseq >=1.4 && <1.5,
                       process >=1.2 && <1.5,
                       time >=1.5 && <1.7,
                       mersenne-random-pure64 >=0.2 && <1,
                       MonadRandom >=0.4.2 && <1,
                       microlens-platform >=0.3 && <1,
                       mtl >=2.2 && <3,
                       transformers >=0.4 && <0.6,
                       bytestring >=0.10 && <0.11,
                       binary >=0.7 && <0.9,
                       data-binary-ieee754 >=0.4 && <0.5,
                       vect >=0.4 && <0.5,
                       vector >=0.11 && <0.12,
                       megaparsec >=5.0 && <5.2,
                       aeson >=0.9 && <1,
                       pretty-show >=1.6 && <1.7,
                       digest >=0.0 && <0.1,
                       JuicyPixels >=3.2 && <3.3,
                       zlib >=0.6 && <0.7,
                       lambdacube-compiler >=0.6 && <0.7,
                       lambdacube-gl >=0.5 && <0.6,
                       lambdacube-ir >=0.3 && <0.4
  -- hs-source-dirs:      
  default-language:    Haskell2010

  c-sources:           cbits/stb_image.c 
  include-dirs:        cbits
  cc-options:          -O3 -DSTBI_NO_HDR -DSTBI_NO_STDIO -DSTBI_FAILURE_USERMSG

executable q3mapviewer
  hs-source-dirs:   mapviewer
  main-is:          MapViewer.hs
  other-modules:    Camera
                    Content
                    Engine
                    Entity
                    ItemsMV
  default-language: Haskell2010

  build-depends:
    base < 5,
    containers >=0.5 && <0.6,
    filepath >=1.4 && <1.5,
    directory >=1.2 && <1.3,
    vect >=0.4 && <0.5,
    vector >=0.11 && <0.12,
    GLFW-b >= 1.4.7,
    elerea >=2.8 && <2.9,
    OpenGLRaw >=3.1 && <4,
    proteaaudio >= 0.7 && <1,
    bytestring >=0.10 && <0.11,
    unordered-containers >=0.2 && <0.3,
    binary >=0.7 && <0.9,
    pretty-show >=1.6 && <1.7,
    JuicyPixels >=3.2 && <3.3,
    deepseq >=1.4 && <1.5,
    lambdacube-gl >=0.5 && <0.6,
    lambdacube-quake3

  if flag(mapviewer)
    Buildable: True
  else
    Buildable: False

executable shooter
  hs-source-dirs:   game
  main-is:          GameMain.hs
  other-modules:    RenderGame
                    LoadEntities
                    Collision
                    Entities
                    Visuals
                    World
                    GameLogic
                    Items
  default-language: Haskell2010

  build-depends:
    base < 5,
    containers >=0.5 && <0.6,
    filepath >=1.4 && <1.5,
    directory >=1.2 && <1.3,
    microlens-platform >=0.3 && <1,
    mtl >=2.2 && <3,
    transformers >=0.4 && <0.6,
    mersenne-random-pure64 >=0.2 && <1,
    vect >=0.4 && <0.5,
    GLFW-b >= 1.4.7,
    OpenGLRaw >=3.1 && <4,
    bytestring >=0.10 && <0.11,
    JuicyPixels >=3.2 && <3.3,
    vector >=0.11 && <0.12,
    digest >=0.0 && <0.1,
    MonadRandom >=0.4.2 && <1,
    lambdacube-gl >=0.5 && <0.6,
    lambdacube-quake3

  if flag(shooter)
    Buildable: True
  else
    Buildable: False

  GHC-Options: -rtsopts
