name:                lambdacube-quake3
version:             0.1.0.0
synopsis:            first person shooter game engine
-- description:         
homepage:            lambdacube3d.com
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
                     cbits/stb_image.h
cabal-version:       >=1.10

Data-Files:
  lc/Graphics.lc
  lc/Loading.json
  lc/Loading.lc
  lc/Material.lc
  lc/SimpleGraphics.json
  lc/SimpleGraphics.lc

Flag mapviewer
  Description: Q3 map viewer application
  Default: True

Flag shooter
  Description: 3D shooter game
  Default: True

library
  exposed-modules:     GameEngine.Data.BSP
                       GameEngine.Data.MD3
                       GameEngine.Data.GameCharacter
                       GameEngine.Data.Material
                       GameEngine.Loader.BSP
                       GameEngine.Loader.Entity
                       GameEngine.Loader.GameCharacter
                       GameEngine.Loader.MD3
                       GameEngine.Loader.ShaderParser
                       GameEngine.Loader.Zip
                       GameEngine.Loader.Image
                       GameEngine.Graphics.Culling
                       GameEngine.Graphics.Frustum
                       GameEngine.Graphics.GameCharacter
                       GameEngine.Graphics.BSP
                       GameEngine.Graphics.MD3
                       GameEngine.Graphics.Quad
                       GameEngine.Graphics.Storage
                       GameEngine.Graphics.BezierSurface
                       GameEngine.Content
                       GameEngine.Collision
                       GameEngine.Utils
                       GameEngine.Scene
                       GameEngine.RenderSystem

  other-modules:       Paths_lambdacube_quake3
  -- other-extensions:    
  build-depends:       base,
                       containers,
                       unordered-containers,
                       hashable,
                       filepath,
                       directory,
                       deepseq,
                       process,
                       time,
                       mersenne-random-pure64,
                       MonadRandom,
                       microlens-platform,
                       mtl,
                       transformers,
                       bytestring,
                       binary,
                       data-binary-ieee754,
                       vect,
                       vector,
                       megaparsec,
                       aeson,
                       pretty-show,
                       digest,
                       JuicyPixels,
                       zlib,
                       lambdacube-compiler,
                       lambdacube-gl,
                       lambdacube-ir
  -- hs-source-dirs:      
  default-language:    Haskell2010

  c-sources:           cbits/stb_image.c 
  include-dirs:        cbits
  cc-options:          -O3 -DSTBI_NO_HDR -DSTBI_NO_STDIO -DSTBI_FAILURE_USERMSG

executable q3mapviewer
  hs-source-dirs:   mapviewer
  main-is:          MapViewer.hs
  other-modules:    Camera
                    Content
                    Engine
                    Entity
                    ItemsMV
  default-language: Haskell2010

  build-depends:
    base,
    containers,
    filepath,
    directory,
    vect,
    vector,
    GLFW-b,
    elerea,
    OpenGLRaw,
    proteaaudio,
    bytestring,
    unordered-containers,
    binary,
    pretty-show,
    JuicyPixels,
    deepseq,
    lambdacube-gl,
    lambdacube-quake3

  if flag(mapviewer)
    Buildable: True
  else
    Buildable: False

executable shooter
  hs-source-dirs:   game
  main-is:          GameMain.hs
  other-modules:    RenderGame
                    LoadEntities
                    LoadResources
                    Collision
                    Entities
                    Visuals
                    World
                    GameLogic
                    Items
                    Player
  default-language: Haskell2010

  build-depends:
    base,
    containers,
    filepath,
    directory,
    microlens-platform,
    mtl,
    transformers,
    mersenne-random-pure64,
    binary,
    vect,
    GLFW-b,
    OpenGLRaw,
    bytestring,
    JuicyPixels,
    vector,
    digest,
    MonadRandom,
    lambdacube-gl,
    lambdacube-quake3

  if flag(shooter)
    Buildable: True
  else
    Buildable: False

  GHC-Options: -rtsopts
