Name:          q3demo
Version:       0.1.1
Cabal-Version: >= 1.2
Synopsis:      Simple First Person Shooter (LambdaCube tech demo)
Category:      Graphics, Game
Description:
               TBD
Author:        Csaba Hruska
Maintainer:    csaba (dot) hruska (at) gmail (dot) com
Copyright:     (c) 2011-2012, Csaba Hruska
Homepage:      http://www.haskell.org/haskellwiki/LambdaCubeEngine
Bug-Reports:   http://code.google.com/p/lambdacube/issues
License:       BSD3
License-File:  LICENSE
Stability:     experimental
Build-Type:    Simple
Extra-Source-Files:
  BSP.hs
  Items.hs
  MD3.hs
  Main.hs
  Material.hs
  Q3Patch.hs
  Render.hs
  ShaderParser.hs
  Zip.hs

Flag Capture
  Description:    Enable the continuous screen capture functionality.
  Default:        False

Executable q3demo-dsl
  HS-Source-Dirs: .
  Main-IS:        Main.hs
  GHC-Options:    -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing -O1 -fspec-constr-count=6 -rtsopts
  -- -prof -auto-all -caf-all
  Build-Depends:  base >= 4 && < 5,
                  binary,
                  bytestring,
                  containers,
                  directory,
                  filepath,
                  vector,

                  pretty-show >=1.6 && <1.7, 
                  GLFW-b >= 1.4.6,
                  JuicyPixels,
                  OpenGLRaw,
                  attoparsec,
                  bytestring-trie,
                  data-binary-ieee754,
                  digest,
                  elerea,
                  lambdacube-compiler == 0.5.*,
                  lambdacube-gl == 0.5.*,
                  lambdacube-ir == 0.3.*,
                  deepseq,
                  aeson,
                  time,
                  mmap,
                  vect,
                  zlib

  if flag(Capture)
    Build-Depends:  Codec-Image-DevIL
    CPP-Options:    -DCAPTURE
