name:                lambdacube-quake3-engine
version:             0.1.0.0
synopsis:            LambdaCube 3D based game engine inspired by idTech3
-- description:         
homepage:            lambdacube3d.com
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
extra-source-files:  cbits/stb_image.h
cabal-version:       >=1.10

Data-Files:
  lc/Graphics.lc
  lc/Loading.json
  lc/Loading.lc
  lc/Material.lc
  lc/SimpleGraphics.json
  lc/SimpleGraphics.lc

library
  exposed-modules:     GameEngine.Data.BSP
                       GameEngine.Data.MD3
                       GameEngine.Data.GameCharacter
                       GameEngine.Data.Material
                       GameEngine.Loader.BSP
                       GameEngine.Loader.Entity
                       GameEngine.Loader.GameCharacter
                       GameEngine.Loader.MD3
                       GameEngine.Loader.ShaderParser
                       GameEngine.Loader.Zip
                       GameEngine.Loader.Image
                       GameEngine.Graphics.Culling
                       GameEngine.Graphics.Frustum
                       GameEngine.Graphics.GameCharacter
                       GameEngine.Graphics.BSP
                       GameEngine.Graphics.MD3
                       GameEngine.Graphics.Quad
                       GameEngine.Graphics.Storage
                       GameEngine.Graphics.BezierSurface
                       GameEngine.Content
                       GameEngine.Collision
                       GameEngine.Utils
                       GameEngine.Scene
                       GameEngine.RenderSystem

  other-modules:       Paths_lambdacube_quake3_engine

  build-depends:       base,
                       containers,
                       unordered-containers,
                       hashable,
                       filepath,
                       directory,
                       deepseq,
                       process,
                       time,
                       mersenne-random-pure64,
                       MonadRandom,
                       microlens-platform,
                       mtl,
                       transformers,
                       bytestring,
                       binary,
                       data-binary-ieee754,
                       vect,
                       vector,
                       megaparsec,
                       aeson,
                       pretty-show,
                       digest,
                       JuicyPixels,
                       zlib,
                       lambdacube-compiler,
                       lambdacube-gl,
                       lambdacube-ir

  default-language:    Haskell2010

  c-sources:           cbits/stb_image.c
  include-dirs:        cbits
  cc-options:          -O3 -DSTBI_NO_HDR -DSTBI_NO_STDIO -DSTBI_FAILURE_USERMSG
