name:                quake3-mapviewer
version:             0.1.0.0
synopsis:            quake 3 map viewer application
homepage:            lambdacube3d.com
license:             BSD3
author:              Csaba Hruska
maintainer:          csaba.hruska@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable q3mapviewer
  main-is:          Main.hs
  other-modules:    Camera
                    Content
                    Engine
                    Entity
                    ItemsMV
  default-language: Haskell2010

  build-depends:
    base,
    containers,
    filepath,
    directory,
    vect,
    vector,
    GLFW-b,
    elerea,
    OpenGLRaw,
    proteaaudio,
    bytestring,
    unordered-containers,
    binary,
    pretty-show,
    JuicyPixels,
    deepseq,
    lambdacube-gl,
    lambdacube-quake3-engine
