name:                md3-show
version:             0.1.0.0
synopsis:            idTech3 MD3 model printer
license:             BSD3
license-file:        LICENSE
author:              Csaba Hruska
build-type:          Simple
cabal-version:       >=1.10

executable md3-show
  main-is:             Md3Show.hs
  default-language:    Haskell2010
  build-depends:       base,
                       pretty-show,
                       lambdacube-quake3-engine
